--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tiptap/extension-code-block": "^3.13.0",
     "@tiptap/extension-highlight": "^3.13.0",
+    "@tiptap/html": "^3.13.0",
     "@tiptap/pm": "^3.13.0",
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
